# disf-official

./: .gitignore  README.md  build.sh  pyproject.toml  run.sh  setup.py
assets/franka_emika_panda_grasp/: generated_scene_pretty.xml  main_model.xml  panda.xml  panda_arm_with_hand.xml  panda_hand.xml  scene.xml  scene_box_grasp.xml  scene_ycb_object_grasp.xml  scene_ycb_object_grasp_with_arm.xml
disf/: __init__.py
disf/contact_detection/: detect_plane_intersection.py
disf/correspondence_matching/: ICPPointMatcher.py  ICPPointMatcherWithNormals.py  filter_by_angle_threshold.py  filter_by_finger_normals.py  filter_duplicates.py
disf/correspondence_matching/unit_test/: test.py
disf/domain_object/builder/: SelfContainedDomainObjectBuilder.py
disf/domain_object/director/: __init__.py
disf/grasp_planning/: ISF_Planning_With_Single_ICP.py
disf/grasp_planning/cma/: CMASF.py
disf/grasp_planning/disf/: DISF.py
disf/grasp_planning/error/: compute_all_errors.py  normal_alignment_error.py  (+3 more)
disf/mujoco_grasping/: GraspEvaluation.py  ISFMujocoGraspingYCBObjectEvaluation.py  MujocoGraspingArmGraspViaPregrasp.py
disf/robot_env/: RobotEnvFactory.py  __init__.py
disf/service/: generate_surface_points_panda_hand.py  point_normal_rigid_transformation_from_Rt.py  shift_object_center_to_origin.py  source_unit_rigid_transformation_from_Rt.py  transform_fingertip.py  transform_source_set.py  visualize_n_point_clouds.py  visualize_n_point_clouds_icp.py  visualize_n_point_clouds_with_hand_origin_and_approach_direction.py
disf/value_object/: GripperTransformationParams.py  ICPFiltering.py  ICPResult.py  IPFOResult.py  IPFOVanillaResult.py  ISFResult.py  PFOResult.py  PFOTransformation.py
disf/xml_generation/: __init__.py  generate_mujoco_grasping_scene_with_ycb.py
docker/: Dockerfile
scripts/: download_ycb_dataset.py  pre_convex_shape_approximation.sh
src/config_loader/: ConfigLoader.py
src/contact_detection/: __init__.py
src/correspondence_matching/: ICPPointMatcher.py  ICPPointMatcherWithNormals.py  __init__.py  filter_duplicates.py
src/grasp_planning/: ISF_Planning_With_Single_ICP.py
src/mujoco_grasping/: GraspEvaluation.py  ISFMujocoGraspingYCBObjectEvaluation.py  MujocoGraspingArmGraspViaPregrasp.py  __init__.py
src/robot_env/: RobotEnvFactory.py
src/service/: __init__.py  generate_object_name_list.py  transform_fingertip.py  transform_fingertip_points.py  transform_source_set.py
src/value_object/: IPFOResult.py
src/xml_generation/: generate_mujoco_grasping_scene_with_ycb.py
test/: cma_grasp.py  disf_grasp.py  visf_grasp.py
test/realsence/: stream_point_cloud.py
(+174 files in other folders)
